--- a/components/home/readingGoals/readingGoals.module.scss
+++ b/components/home/readingGoals/readingGoals.module.scss
@@ -1,28 +1,24 @@
-.readingGoals{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    p{
-        color: $primary-dark-blue;
-        span{
-            font-weight: 600;
-        }
+.readingGoals {
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  p {
+    color: $primary-dark-blue;
+    span {
+      font-weight: 600;
     }
-
-    
+  }
 }
 
-.yearGoal{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    border: 2px solid $primary-dark-blue;
-    border-radius: 5px;
-    padding: 0.5rem  1rem;
-    text-align: center;
-    font-weight: 600;
+.yearGoal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 2px solid $primary-dark-blue;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+  text-align: center;
+  font-weight: 600;
 }
-
-
-
